--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body{
         padding: 0 50px 50px 50px;
         margin-top: 10px;
         border-radius: 10px;
-        background: url("https://w0.peakpx.com/wallpaper/112/647/HD-wallpaper-pink-pastel-petal-rose-pink-love-cute-birds-girly.jpg");
+        background: url("images/background.jpg");
         background-size: cover;
       }
 .container1{
