--- a/styles.css
+++ b/styles.css
@@ -230,3 +230,61 @@ h1{
     gap: 10px;
 }
 }
+@media (max-width: 500px) {
+     .container {
+        margin-top: 50px;
+        width: 80%;
+        height: 800px;
+        padding: 20px;
+    }
+    .container1 {
+        flex-direction: column;
+        height: max-content;
+        width: 90%;
+        padding: 10px;
+        gap: 20px;
+    }
+    .container2 {
+        flex-direction: row;
+        height: max-content;
+        width: 90%;
+        padding: 10px;
+        gap: 20px;
+    }
+.images{
+   
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: 60px;
+    height: 40px;
+}    
+img{
+    height: 70px;
+    width: 70px;
+}
+.tarif{
+    width: 100%;
+    height: 500px;
+    margin: 10px 0;
+
+}
+h1{
+    font-size: 1.1rem;
+  
+}
+.bouquets{
+    left: 0;
+    width: 100%;
+    font-size: 0.8rem;
+    line-height: normal;
+
+}
+.rose_mixte{
+    right: 0;
+    font-size: 0.70rem;
+    gap: 10px;
+}
+}
+
