--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,5 @@
 body{
     font-family: arial;
-    display: flex;
-    justify-content: center;
     background: url("https://images.unsplash.com/photo-1518931479438-62470470be9a?q=80&w=1412&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-position: 900px;
     background-repeat: repeat;
@@ -232,8 +230,8 @@ h1{
 }
 @media (max-width: 500px) {
      .container {
-    
-        margin-top: 100px;
+        place-self: center;
+        margin-top: 50px;
         width: 80%;
         height: max-content;
         padding: 0 20px 0 20px;
@@ -305,7 +303,18 @@ h2{
 }
 b{
     background-color: rgba(255, 255, 255, 0.452);
-    border-radius: 5px; 
+    border-radius: 5px;
 }
+}
+
+.container {
+  animation: fadeUp 1s both;
+  view-timeline-name: --scroll;
+  animation-timeline: --scroll;
+}
+
+@keyframes fadeUp {
+  from {opacity: 0; transform: translateY(3000px); }
+  to { opacity: 1; transform: translateY(0); }
 }
 
