--- a/styles.css
+++ b/styles.css
@@ -266,7 +266,7 @@ h1{
 @media (max-width: 500px) {
      .container {
         place-self: center;
-        margin-top: 50px;
+        margin-left:20px;
         width: 80%;
         height: max-content;
         padding: 0 20px 0 20px;
