--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&family=Montserrat:wght@300;400;500&display=swap');
+
 body{
     font-family: arial;
     background: url("https://images.unsplash.com/photo-1518931479438-62470470be9a?q=80&w=1412&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
@@ -5,7 +7,46 @@ body{
     background-repeat: repeat;
     background-size: cover;
 }
+header{
+    height:150px;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: url("https://raw.githubusercontent.com/Karimlw1/everything-with-html-css/main/images/flowers.jpg");
+    border-radius: 0 0 20px 20px;
+    background-position: center;
+    background-size: cover;
+    box-shadow: 0 4px 8px rgba(70, 77, 67, 0.9);
+    margin-bottom: 20px;
+}
+header div{
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    height: 100%;
 
+}
+header div button{
+    height: 40px;
+    width: 200px;
+    margin: 50px 20px;
+    border-radius: 10px;
+    border: solid 2px rgba(128, 128, 128, 0.322);
+    background-color: rgba(71, 92, 57, 0.452);
+    color: rgba(255, 255, 255, 0.795);
+    font-weight: bold;
+    cursor: pointer;
+    transition: all ease-in-out 0.8s;
+}
+header div button:hover{
+    background-color: rgba(138, 24, 24, 0.795);
+    color: rgba(0, 0, 0, 0.952);
+    border: none;
+    box-shadow: 1px 1px 15px 1px rgb(100, 114, 84);
+    scale: 1.09;
+}
 .welcome-box {
     place-self: center;
     opacity: 0;
@@ -30,15 +71,21 @@ h3 {
     margin: 0 0 .5rem;
     font-weight: 600;
     font-size: 1.6rem;
-    
+    font-family: 'Playfair Display', serif;
 }
 
 p {
     margin: 0;
     font-size: .95rem;
-    color: grey;
+    color: #b9b8b8;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    text-align: justify;
 }
-
+i{
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+}
 .container{
         display: flex;
         flex-direction: column;
@@ -266,7 +313,7 @@ h1{
 @media (max-width: 500px) {
      .container {
         place-self: center;
-        margin-left:20px;
+        margin-top: 50px;
         width: 80%;
         height: max-content;
         padding: 0 20px 0 20px;
@@ -349,7 +396,7 @@ b{
 }
 
 @keyframes fadeUp {
-  from {opacity: 0; transform: translateY(500px); }
+  from {opacity: 0; transform: translateY(100px); }
   to { opacity: 1; transform: translateY(0); }
 }
 
