--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ header{
     top: 0;
     left: 0;
     right: 0;
+    background-color: red;
     background: url("https://raw.githubusercontent.com/Karimlw1/everything-with-html-css/main/images/flowers.jpg");
     border-radius: 0 0 20px 20px;
     background-position: center;
@@ -86,6 +87,9 @@ i{
     font-weight: bold;
     color: rgb(255, 255, 255);
 }
+.fa{
+    color: rgb(141, 146, 137);
+}
 .container{
         display: flex;
         flex-direction: column;
@@ -95,7 +99,7 @@ i{
         width: max-content;
         border:  solid 2px rgba(128, 128, 128, 0.322);
         margin-top: 10px;
-        margin-left: 20px;
+        margin-left: 15px;
         padding: 10px;
         border-radius: 10px;
         background: url("images/background.jpg");
