--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ header{
     top: 0;
     left: 0;
     right: 0;
-    background-color: red;
     background: url("https://raw.githubusercontent.com/Karimlw1/everything-with-html-css/main/images/flowers.jpg");
     border-radius: 0 0 20px 20px;
     background-position: center;
@@ -48,7 +47,7 @@ header div button:hover{
     box-shadow: 1px 1px 15px 1px rgb(100, 114, 84);
     scale: 1.09;
 }
-.welcome-box {
+.welcome-box[id="welcome"] {
     place-self: center;
     opacity: 0;
     transform: translateY(20px);
@@ -62,6 +61,21 @@ header div button:hover{
     text-align: center;
     margin-top: 200px;
 }
+.welcome-box[id="welcome2"]{
+    place-self: center;
+    opacity: 0;
+    transform: translateY(20px);
+    background: rgba(11, 11, 165, 0.767);
+    padding: 2rem 3rem;
+    border-radius: 12px;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.8);
+    color: rgb(230, 230, 230);
+    transition: opacity .8s ease, transform 4s ease;
+    max-width: 480px;
+    text-align: center;
+    margin-top: 50px;
+}
+
 
 .welcome-box.visible {
     opacity: 1;
@@ -99,7 +113,6 @@ i{
         width: max-content;
         border:  solid 2px rgba(128, 128, 128, 0.322);
         margin-top: 10px;
-        margin-left: 15px;
         padding: 10px;
         border-radius: 10px;
         background: url("images/background.jpg");
@@ -219,6 +232,20 @@ h2{
 .packet-img img{
     border-radius: 10px;
 }
+
+.hero-title {
+  font-family: 'Playfair Display', serif;
+  font-weight: 600;
+  font-size: 2.6rem;
+}
+
+.subtitle {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 1.1rem;
+  opacity: 0.85;
+}
+
 @media (max-width: 900px) {
     .container {
         width: max-content;
