--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ header div button:hover{
     color: rgb(30, 63, 30);
     transition: opacity .8s ease, transform 4s ease;
     max-width: 480px;
+    height: 300px;
     text-align: center;
     margin-top: 200px;
 }
@@ -71,7 +72,7 @@ header div button:hover{
     padding: 2rem 3rem;
     border-radius: 12px;
     box-shadow: 0 6px 18px rgba(0,0,0,0.8);
-    color: rgb(230, 230, 230);
+    color: rgb(230, 227, 227);
     transition: opacity .8s ease, transform 4s ease;
     max-width: 480px;
     text-align: center;
@@ -115,7 +116,7 @@ i{
         width: max-content;
         border:  solid 2px rgba(128, 128, 128, 0.322);
         margin-top: 10px;
-        margin-left: 10px;
+        margin-left: 20px;
         padding: 10px;
         border-radius: 10px;
         background: url("images/background.jpg");
