--- a/styles.css
+++ b/styles.css
@@ -259,6 +259,7 @@ section{
     flex-direction: row;
 }
 section div{
+    width: max-content;
     height: max-content;
     border-radius: 10px;
 }
