--- a/styles.css
+++ b/styles.css
@@ -347,12 +347,14 @@ section div video{
     justify-content: space-around;
     align-items: center;
     gap: 30px;
-    height: 250px;
+    height: 100px;
+    width: 100px;
 }    
-img{
+.images2{
     height: 100px;
     width: 100px;
 }
+
 .tarif{
     width: 100%;
     height: 500px;
@@ -411,7 +413,8 @@ h1{
     justify-content: space-between;
     align-items: center;
     gap: 40px;
-    height: 0;
+    height: 70px;
+    width: 70px;
 }   
 .images2{
     display: flex;
@@ -420,12 +423,9 @@ h1{
     margin-top: 5%;
     align-items: center;
     gap: 60px;
-    height: 40px;
-} 
-img{
     height: 70px;
     width: 70px;
-}
+} 
 .tarif{
     width: 100%;
     height: 500px;
