--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body{
     background-repeat: repeat;
     background-size: cover;
     display: flex;
+    flex-wrap: inherit;
     flex-direction: column;
     align-content: center;
 }
