--- a/styles.css
+++ b/styles.css
@@ -255,7 +255,7 @@ section{
     display: grid;
     gap:10px;
     --max: 6;
-    grid-template-columns: repeat(auto-fit, minmax(108px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 200px));
     margin-top: 50px;
     justify-items: center;
 }
