adding a . before card on styles.css to size the images

--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ header button:hover {
   transition: transform .3s, box-shadow .3s;
   animation: cardAppear .8s ease-out;
 }
-card img{
+.card img{
     height: 100%;
     width: 100%;
 }
